<resources>
    <string name="app_name">Anime Watcher</string>
    <string name="website_link">https://animewatcher-api.bagsplusportugal.com/</string>
    <string name="no_image_available_url">https://drive.google.com/uc?id=1-hEjG3eO0VtZNagUvvppAKk5O39MwrFb</string>
    <string name="session_expired_error">Your session has expired. Please Login again</string>
    <string name="updates_alert_title">Update Available</string>
    <string name="updates_alert_message_part1">There is an app update available to version</string>
    <string name="updates_alert_message_part2">It is highly recommended to update, since some features might be broken or new ones were added.\n\nDo you wish to update now?</string>
    <string name="updates_alert_later">Later</string>
    <string name="dev_app_alert_title">Developer App Detected</string>
    <string name="dev_app_alert_message">You are running a closed developer App that was not launched to the public.\nBEWARE! This version may contain bugs and unfinished features.</string>
    <string name="nav_anime_list">Anime List</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_home">Home</string>
    <string name="nav_mylist">My List</string>
    <string name="nav_download_anime">Downloads</string>
    <string name="topnav_desc_logo">Anime Watcher</string>
    <string name="topnav_desc_search">Search Anime</string>
    <string name="topnav_desc_profile">User Profile</string>
    <string name="topnav_login">Login</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="lbl_login_forgotPassword">Forgot your password?</string>
    <string name="lbl_login_forgotPassword_underline"><u>Forgot your password?</u></string>
    <string name="btn_login">Sign In</string>
    <string name="lbl_register">Don\'t have an account yet?</string>
    <string name="lbl_register_now">Register Now</string>
    <string name="lbl_register_now_underline"><u>Register Now</u></string>
    <string name="login_username_error">Please insert a valid username!</string>
    <string name="login_password_error">Please insert a valid password!</string>
    <string name="login_fields_error">Please insert both a valid username and password!</string>
    <string name="login_communication_error">There has been an error communicating with the server.</string>
    <string name="login_invalid_credentials">Invalid username or password!</string>
    <string name="login_account_disabled_title">Account Disabled</string>
    <string name="login_account_disabled_message">Your account appears be disabled…\nIf you just created your account, there should be an activation email at your inbox. Otherwise, you may have been blocked.</string>
    <string name="lbl_account_management">Account Management:</string>
    <string name="lbl_others">Others:</string>
    <string name="lbl_change_user">Change Names</string>
    <string name="lbl_change_email">Change Email</string>
    <string name="lbl_change_account_settings">Change Profile Settings</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="lbl_about_us">About Us</string>
    <string name="lbl_donate">Donate</string>
    <string name="lbl_submit_anime">Submit Anime</string>
    <string name="lbl_disclaimer_privacy_policy">Disclaimer &amp; Privacy Policy</string>
    <string name="lbl_logout">Logout This Device</string>
    <string name="lbl_full_logout">Logout All Devices</string>
    <string name="lbl_full_logout_warning_title">Perform a Full Logout?</string>
    <string name="lbl_full_logout_warning_message">This action will logout all the devices connected to this account.\nAre you sure you want to proceed?</string>
    <string name="logout_error">There has been an error communicating with the server!</string>
    <string name="LeaveTitle">Exit?</string>
    <string name="LeaveMessage">Are you really sure you want to leave?</string>
    <string name="LeaveYes">Yes</string>
    <string name="LeaveNo">No</string>
    <string name="subAnime_title">Submit Anime</string>
    <string name="subAnime_body">Want us to add a missing anime or episode? Tell us by filling the form bellow :)</string>
    <string name="hint_subAnime_username">Username*</string>
    <string name="hint_subAnime_email">Email*</string>
    <string name="hint_subAnime_anime">Anime or Episode*</string>
    <string name="hint_subAnime_body">Description</string>
    <string name="btn_subAnimne_submit">Submit</string>
    <string name="subAnime_input_error">Please fill all the mandatory fields!</string>
    <string name="subAnime_success">You request has been submitted. Thank you!</string>
    <string name="subAnime_email_error">Please insert a valid email address!</string>
    <string name="mylist_login_error">Please login before accessing this section!</string>
    <string name="mylist_no_items">Your list does not have any items yet :/ \n To add some, go to an anime page and press "Add to List".</string>
    <string name="home_title_latest">Latest</string>
    <string name="home_most_views">Most Views</string>
    <string name="home_random">Random</string>
    <string name="hint_txt_search">Anime Search…</string>
    <string name="no_items_error">No items found :(</string>
    <string name="lbl_search_desc">Description:</string>
    <string name="no_anime_with_category_error">Unfortunately, there are still no Anime series in our platform with this category :(</string>
    <string name="lbl_title_episode">Episode</string>
    <string name="lbl_title_extra">Extra</string>
    <string name="add_to_list_text">+ Add to My List</string>
    <string name="mylist_success_message">Anime added successfully!</string>
    <string name="remove_from_list_text">- Remove from My List</string>
    <string name="mylist_remove_sucess_message">Anime removed successfully!</string>
    <string name="anime_page_mylist_login_error">Please login first!</string>
    <string name="lbl_no_extra_episodes">This anime does not have any extra episodes.</string>
    <string name="lbl_no_episodes">Woops, looks like there are no episodes for this anime.</string>
    <string name="str_swipe_toast">You can swipe right to see all the extra episodes!</string>
    <string name="lbl_session_error">Your session is no longer valid. Please re-log and try again.</string>
    <string name="lbl_video_player_next">Next Episode</string>
    <string name="btn_video_player_allEpisodes">All Episodes</string>
    <string name="episode_view_error">There has been an error registering your view.</string>
    <string name="lbl_donate_title">Donate</string>
    <string name="lbl_donate_description">Enjoying the experience and want to donate? You can do so using the addresses below :)</string>
    <string name="btn_copy_address">Copy Address</string>
    <string name="toast_donate_success">Address copied to clipboard!</string>
    <string name="lbl_btc">Bitcoin - BTC</string>
    <string name="lbl_eth">Ethereum - ETH</string>
    <string name="lbl_rvn">Raven - RVN</string>
    <string name="lbl_doge">Dogecoin - DOGE</string>
    <string name="lbl_ltc">Litecoin - LTC</string>
    <string name="lbl_xmr">Monero - XMR</string>
    <string name="address_btc">1Fr4S3R9GqotjYmrCoXhVdY9BgB6d646Eh</string>
    <string name="address_eth">0x2cf92f305648210d3d09b8da767b5074a21bcfab</string>
    <string name="address_rvn">RCwUwAiJi5uFwN9xUKVEe4iCkgyuk5TYj6</string>
    <string name="address_doge">DF9LLxQRvXzbtEfN8c5yMYzBiTLEzJnWsJ</string>
    <string name="address_ltc">Lh2ynmwXZRZ3EwqD1C7JAgXFzYZqGs1umi</string>
    <string name="address_xmr">83pBoTQSe14GhaXcy3hg9Q8PbNS3gjPXSNRJ48ETi5mu9HNGN1TwR89MEff7DB2F1AdSiLGoSZJGaeJt3eSN7s7w2FXA4iz</string>
    <string name="lbl_about_us_title">About Us</string>
    <string name="lbl_who_are_we_title">Who Are We?</string>
    <string name="lbl_who_are_we_text">We are a group of people that enjoys anime and came together to build this platform. We\'ve noticed that most free mobile anime stream platforms sometimes lack quality, have a slow video buffer, or are full of pop ups and really annoying ads. \n\nSo we decided to change that and implement a solution that provides a good experience, for free, with less ads and a decent video quality. Do keep in mind that the episodes featured are not uploaded by us, which makes controlling quality harder.</string>
    <string name="lbl_why_should_you_title">Why should you watch anime on our platform?</string>
    <string name="lbl_why_should_you_text">Our platform does have its flaws, or maybe it\'s missing some of your favorite series, but we will try to listen to the community as much as possible to be able to improve it and provide a better experience! \n\nAs of now we only offer an Android App, but we may expand to other devices, like IOS, who knows.</string>
    <string name="lbl_disclaimer_privacy_policy_title">Disclaimer &amp; Privacy Policy</string>
    <string name="lbl_disclaimer_title">Disclaimer</string>
    <string name="lbl_disclaimer_text">We do not claim to be the creator of any anime series. We had absolutely no part in any creation of any anime series, and are just dedicated fans of various anime series who have taken their time to create this website. None of the video content of this website is hosted on our servers or on servers of our staff, family members or otherwise related in any way whatsoever. Unless otherwise stated, all video content is uploaded by and hosted on the servers of third-parties, so called Video Sharing Websites, such as, but not limited to Veoh, YouTube, Dailymotion and Myspace Videos. In case of copyright infringement or any other issue, please directly contact the responsible parties. Anime Watcher is merely functioning as an index and database of anime content found publicly on the Internet, in principle conducting in the same way as Google. However, Anime Watcher strongly believes in the protection of intellectual property and would be willing to assist when possible and applicable. Users who upload to these websites agree not to upload illegal content when creating their user accounts. Anime Watcher does not accept responsibility for content hosted on third party websites, nor do we upload vidoes ourselves or encourage others to do so. The anime videos are streamed directly from the third-party video sharing services mentioned above. We are simply here to encourage the continuing popularity of Japanese Anime, and for many more viewers to watch it. All other trademarks, logos, and images are the property of their respective and rightful owners.</string>
    <string name="lbl_privacy_policy_title">Privacy Policy</string>
    <string name="lbl_privacy_policy_text">We do not sell, trade, or otherwise transfer to outside parties your personally identifiable information unless we provide you with advance notice. This does not include website hosting partners and other parties who assist us in operating our website, conducting our business, or servicing you, so long as those parties agree to keep this information confidential. We may also release your information when we believe release is appropriate to comply with the law, enforce our site policies, or protect ours or others\' rights, property, or safety. However, non-personally identifiable visitor information may be provided to other parties for marketing, advertising, or other uses.</string>
    <string name="lbl_topnav_change_user_title">Change Names</string>
    <string name="lbl_hint_first_name">First Name</string>
    <string name="lbl_hint_last_name">Last Name</string>
    <string name="lbl_btn_save">Save Changes</string>
    <string name="lbl_empty_fields_error">Please fill the fields before saving!</string>
    <string name="lbl_server_bad_response_error">Could not save your settings. Please try again later.</string>
    <string name="lbl_topnav_change_email_title">Change Email</string>
</resources>